Issue #3349561: [Entity-Browser] Icons distorted on Chrome

--- a/styles/helpers/_tools.scss
+++ b/styles/helpers/_tools.scss
@@ -53,7 +53,7 @@ $html-font-size: 16px;
   background-image: icon($name);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 15px;
+  background-size: 15px 15px;
 
   border-radius: 50%;
   border-color: transparent !important;
